boltffi_bindgen/src/render/typescript/snapshots/boltffi_bindgen__render__typescript__templates__tests__snapshot_async_function_returns_callback_handle.snap
---
source: boltffi_bindgen/src/render/typescript/templates.rs
expression: output
---
export async function makeCallback(): Promise<MyCallback> {


  const handle = (_exports.boltffi_make_callback as Function)();
  const awaitedHandle = await _module.asyncManager.pollAsync(
    handle,
    (h: number) => (_exports.boltffi_make_callback_poll_sync as Function)(h),
    (h: number) => (_exports.boltffi_make_callback_panic_message as Function)(h),
    (h: number) => (_exports.boltffi_make_callback_free as Function)(h)
  );


  try {
    const result = _module.completeAsync((statusPtr: number) => (_exports.boltffi_make_callback_complete as Function)(awaitedHandle, statusPtr)) as number;
    return wrapMyCallback(result);
  } finally {
    (_exports.boltffi_make_callback_free as Function)(awaitedHandle);
  }


}
