boltffi_bindgen/src/render/typescript/snapshots/boltffi_bindgen__render__typescript__templates__tests__snapshot_callback_not_returned_omits_proxy.snap
---
source: boltffi_bindgen/src/render/typescript/templates.rs
expression: template.render().unwrap()
---

export interface ValueHandler {
  onValue(value: number): number;
}

const _value_handler_registry = new Map<number, ValueHandler>();
const _value_handler_ref_counts = new Map<number, number>();
const _value_handler_local_handles = new Set<number>();
const _value_handler_native_handle = Symbol("ValueHandlerNativeHandle");
let _value_handler_next_id = _callback_handle_js_namespace_start;
const _value_handler_finalizer: FinalizationRegistry<number> | null =
  typeof FinalizationRegistry === "undefined"
    ? null
    : new FinalizationRegistry<number>((handle) => {
        _exports.__boltffi_local_value_handler_free(handle);
      });

const _value_handler_lookup = (handle: number): ValueHandler => {
  const handle_key = _callback_handle_key(handle);
  const impl = _value_handler_registry.get(handle_key);
  if (!impl) {
    throw new Error(`Callback handle ${handle_key} not found in ValueHandler registry`);
  }
  return impl;
};

const _value_handler_retain = (handle: number): number => {
  const handle_key = _callback_handle_key(handle);
  const currentCount = _value_handler_ref_counts.get(handle_key);
  if (currentCount === undefined) {
    throw new Error(`Cannot clone unknown callback handle ${handle_key} in ValueHandler registry`);
  }
  _value_handler_ref_counts.set(handle_key, currentCount + 1);
  return handle_key;
};

const _value_handler_release = (handle: number): void => {
  const handle_key = _callback_handle_key(handle);
  const currentCount = _value_handler_ref_counts.get(handle_key);
  if (currentCount === undefined) {
    throw new Error(`Cannot free unknown callback handle ${handle_key} in ValueHandler registry`);
  }
  if (currentCount === 1) {
    const impl = _value_handler_registry.get(handle_key);
    _value_handler_ref_counts.delete(handle_key);
    _value_handler_registry.delete(handle_key);
    if (_value_handler_local_handles.delete(handle_key)) {
      if (impl && typeof impl === "object") {
        _value_handler_finalizer?.unregister(impl as object);
      }
      _exports.__boltffi_local_value_handler_free(handle_key);
    }
    return;
  }
  _value_handler_ref_counts.set(handle_key, currentCount - 1);
};

export function registerValueHandler(impl: ValueHandler): number {
  const existingHandle = (impl as unknown as Record<PropertyKey, unknown>)[_value_handler_native_handle];
  if (typeof existingHandle === "number") {
    return _value_handler_retain(existingHandle);
  }
  const id = _value_handler_next_id++;
  _value_handler_registry.set(id, impl);
  _value_handler_ref_counts.set(id, 1);
  return _callback_handle_key(_exports.boltffi_create_value_handler_handle(id) as number);
}

export function unregisterValueHandler(handle: number): void {
  _value_handler_release(handle);
}

_callbackImports["__boltffi_callback_value_handler_free"] = (handle: number): void => {
  _value_handler_release(handle);
};

_callbackImports["__boltffi_callback_value_handler_clone"] = (handle: number): number => {
  return _value_handler_retain(handle);
};

_callbackImports["__boltffi_callback_value_handler_on_value"] = (handle: number, value: number): number => {
  const impl = _value_handler_lookup(handle);
  return impl.onValue(value);
};
