boltffi_bindgen/src/render/typescript/snapshots/boltffi_bindgen__render__typescript__templates__tests__snapshot_class_with_constructor_and_methods.snap
---
source: boltffi_bindgen/src/render/typescript/templates.rs
expression: template.render().unwrap()
---
/**
 * A counter class
 */
const _CounterFinalizer: FinalizationRegistry<number> | null =
  typeof FinalizationRegistry === "undefined"
    ? null
    : new FinalizationRegistry<number>((handle) => {
        _exports.boltffi_counter_free(handle);
      });

export class Counter {
  private _handle: number;
  private _disposed: boolean;

  private constructor(handle: number) {
    this._handle = handle;
    this._disposed = false;
    _CounterFinalizer?.register(this, handle, this);
  }

  static _fromHandle(handle: number): Counter {
    if (handle === 0) {
      throw new Error("Counter received a null handle");
    }
    return new Counter(handle);
  }

  [Symbol.dispose](): void {
    this.dispose();
  }

  dispose(): void {
    if (this._disposed) {
      return;
    }
    this._disposed = true;
    _CounterFinalizer?.unregister(this);
    _exports.boltffi_counter_free(this._handle);
    this._handle = 0;
  }

  /**
   * moves this rust-owned handle into the ffi callee; this wrapper must not be used afterward (mirrors swift `takeHandle()`).
   */
  takeHandle(): number {
    if (this._disposed) {
      throw new Error("Counter has been disposed");
    }
    if (this._handle === 0) {
      throw new Error("Counter received a null handle");
    }
    this._disposed = true;
    _CounterFinalizer?.unregister(this);
    const h = this._handle;
    this._handle = 0;
    return h;
  }

  private _assertNotDisposed(): void {
    if (this._disposed) {
      throw new Error("Counter has been disposed");
    }
  }

  /**
   * Creates a counter
   */
  static new(): Counter {
    const handle = _exports.boltffi_counter_new();
    return Counter._fromHandle(handle);
  }

  increment(delta: number): number {
    this._assertNotDisposed();
    return _exports.boltffi_counter_increment(this._handle, delta);
  }

  async nextValue(): Promise<number> {
    this._assertNotDisposed();
    const handle = _exports.boltffi_counter_next_value(this._handle);
    const awaitedHandle = await _module.asyncManager.pollAsync(
      handle,
      (futureHandle: number) => _exports.boltffi_counter_next_value_poll_sync(futureHandle),
      (futureHandle: number) => _exports.boltffi_counter_next_value_panic_message(futureHandle),
      (futureHandle: number) => _exports.boltffi_counter_next_value_free(futureHandle)
    );
    const outPtr = _module.allocBufDescriptor();
    let completeCompleted = false;
    try {
      _module.completeAsync((statusPtr: number) => (_exports.boltffi_counter_next_value_complete as Function)(outPtr, awaitedHandle, statusPtr));
      completeCompleted = true;
      const reader = _module.readerFromBuf(outPtr);
      const result = reader.readI32();
      return result;
    } finally {
      if (completeCompleted) {
        _module.freeBuf(outPtr);
      } else {
        _module.freeBufDescriptor(outPtr);
      }
      _exports.boltffi_counter_next_value_free(awaitedHandle);
    }
  }
}
